# voice-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  run.sh
client/: .gitignore  index.html  package.json
client/src/: index.css
client/src/components/: App.jsx  Button.jsx  EventLog.jsx  SessionControls.jsx  Visualizer.jsx
server/: .gitignore  app.py  config.json  pyproject.toml
server/mcp_servers/mcp-shopify/: package.json
server/mcp_servers/mcp-shopify/src/: index.ts  main.ts
server/mcp_servers/mcp-shopify/src/ShopifyClient/: ShopifyClient.ts  ShopifyClientPort.ts
server/src/handlers/: common_handler.py  mcp_handler.py  socket_handler.py
server/src/routes/: openai_route.py
server/src/utils/: config.py  logger.py
